hphp/hack/test/typecheck/new_inference/transitive_error2.php.exp
File "transitive_error2.php", line 17, characters 10-20:
  There are remaining unsolved constraints!: (T <: #0 && #0 <: T)
File "transitive_error2.php", line 34, characters 11-12:
Invalid argument (Typing[4110])
  File "transitive_error2.php", line 20, characters 18-18:
  This is an object of type D
  File "transitive_error2.php", line 25, characters 17-17:
  It is incompatible with an object of type C
